--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>All Cycles - Seattle</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -14,14 +14,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
-
-    <!-- <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
   </head>
   <body>
-    <!--[if lt IE 8]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
     <div class="header-container">
       <header class="clearfix">
         <h2 class="header_h2">
@@ -43,7 +37,6 @@
 
     <div class="main-container">
       <div class="main">
-
         <article>
           <header class="about_all-cycles">
             <p>All Cycles is a grassroots Outreach Project for Seattle community members to bring menstrual supplies to folks in need.</p>
@@ -70,28 +63,13 @@
           </section>
         </article>
 
-      </div> <!-- #main -->
-    </div> <!-- #main-container -->
+      </div>
+    </div>
 
     <div class="footer-container">
       <footer class="section_wrapper">
         <h3>footer</h3>
       </footer>
     </div>
-
-<!--     // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    // <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-    // <script src="js/main.js"></script> -->
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-   <!-- <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-    </script> -->
   </body>
 </html>
