google form styling, location.html created

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a href=""><span class="fa fa-map-marker"></span> View Locations</a>
             </div>
             <div class="button-link">
-              <a href=""><span class="fa fa-gift"></span> Online Wishlist</a>
+              <a href="http://smile.amazon.com/registry/wishlist/30WNGG5HG0EDL"><span class="fa fa-gift"></span> Online Wishlist</a>
             </div>
           </section>
           <section class="join_section section_wrapper">
@@ -60,6 +60,7 @@
               <input name="email-address" type="email" placeholder="Email Address" required>
               <button class="join_button"><span class="fa fa-smile-o"></span> Join Team</button>
             </form>
+            <iframe src="https://docs.google.com/forms/d/17Sj61ShMEZDd39SOkCOjKVccZu-1q9VC7zIS7yFCg5s/viewform?embedded=true" width="760" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
           </section>
         </article>
 
